# nesoxide

./: .gitignore  Cargo.toml  README.md
nesoxide-core/: cargo.toml
nesoxide-core/src/: lib.rs  util.rs
nesoxide-core/src/rom/: ines.rs  mod.rs
src/: main.rs
